--- a/Data Mining/Data Processing/思路-02.md
+++ b/Data Mining/Data Processing/思路-02.md
@@ -16,6 +16,52 @@ df.describe()
 ![Alt text](image-4.png)
 Wave_Height标准差为12220.244834544077很大，需要特殊处理
 Wave_Period的标准差为12220.69686378749也很大，需要特殊处理
+可视化，得到各个数据的盒图
+![Alt text](image-12.png)
+![Alt text](image-13.png)
+![Alt text](image-14.png)
+```python
+def Box_Plot(dataFrame):
+    # 创建一个指定大小的图像
+    plt.figure(figsize=(10, 6))
+    # 绘制盒图
+    columns_to_process = ['Water_Temperature']
+    sb.boxplot(dataFrame[columns_to_process],color='skyblue',flierprops=dict(markerfacecolor='r', marker='s'))
+    # 设置y轴标签
+    plt.ylabel("Data (inches)")
+    # 显示盒图
+    plt.show()
+```
+按月份将六个沙滩的Wave_Height 和Wava_period 绘制折线图
+![Alt text](image-15.png)
+```python
+def Time_Plot(data):
+    Beach_Name = ['Montrose Beach', 'Ohio Street Beach',
+                  'Calumet Beach', '63rd Street Beach', 'Osterman Beach', 'Rainbow Beach']
+
+    plt.figure(figsize=(10, 6))  # Create a single figure
+
+    line_styles = ['-', '--', '-.', ':', '-.', '--']  # Define line styles
+    line_colors = ['blue', 'orange', 'green', 'red', 'purple', 'brown']  # Define line colors
+
+    for i, beach_name in enumerate(Beach_Name):
+        dataFrame = data.loc[data['Beach_Name'] == beach_name]
+        dataFrame['Measurement_Date_And_Time'] = pd.to_datetime(dataFrame['Measurement_Date_And_Time'])
+        dataFrame['月份'] = dataFrame['Measurement_Date_And_Time'].dt.strftime('%Y-%m')
+        columns_to_process = ['Wave_Height', 'Wave_Period']
+        monthly_data = dataFrame.groupby('月份')[columns_to_process].mean()
+
+        plt.plot(monthly_data.index, monthly_data['Wave_Height'], linestyle=line_styles[i], color=line_colors[i], label=beach_name + ' Wave_Height')
+        plt.plot(monthly_data.index, monthly_data['Wave_Period'], linestyle=line_styles[i], color=line_colors[i], label=beach_name + ' Wave_Period')
+
+    plt.title('Time_Data')
+    plt.xlabel('Month')
+    plt.ylabel('Mean')
+    plt.legend()
+    plt.show()
+```
+
+
 ### 数据处理
 不是对一列数据进行处理，而是对属于每个海滩的各个特征进行处理
 
@@ -35,97 +81,8 @@ Wave_Period:
 ![Alt text](image-7.png)
 可以发现Ohio Street Beach、63rd Street Beach、Rainbow Beach三个沙滩的海滩高度和周期有异常值
 
-理论：如果数据点比第一个四分位数低 1.5 乘 IQR，或比第三个四分位数高 1.5 乘 IQR，就属于离群或极度离群
-```python
-Wave_Height = Wave_Height.transpose()
-Wave_Height.to_csv('Wave_Height.csv')
-Q1 = Wave_Height.quantile(0.25)
-Q3 = Wave_Height.quantile(0.75)
-IQR = Q3 - Q1
-df_no_outliers_Wave_Height = \
-Wave_Height[~((Wave_Height < \
-(Q1 - 1.5 * IQR)) | (Wave_Height > (Q3 + 1.5 * IQR)))]
-df_no_outliers_Wave_Height.to_csv('Wave_Height_no_outliers.csv')
-df_no_outliers_Wave_Height.describe().\
-to_csv('Wave_Height_no_outliers_features.csv')
 
-
-Wave_Period = Wave_Period.transpose()
-Wave_Period.to_csv('Wave_Period.csv')
-Q1 = Wave_Period.quantile(0.25)
-Q3 = Wave_Period.quantile(0.75)
-IQR = Q3 - Q1
-df_no_outliers_Wave_Period = \
-Wave_Period[~((Wave_Period < \
-(Q1 - 1.5 * IQR)) | (Wave_Period > (Q3 + 1.5 * IQR)))]
-df_no_outliers_Wave_Period.to_csv('Wave_Period_no_outliers.csv')
-df_no_outliers_Wave_Period.describe().\
-to_csv('Wave_Period_no_outliers_features.csv')
-```
-结果：
-Wave_Height:
-![Alt text](image-8.png)
-Wave_Period:
-![Alt text](image-9.png)
-
-发现一些只是稍微比均值高正值也被剔除掉了，可能会影响训练效果
-观察数据后采用仅仅剔除负值的形式对数据进行处理
-```python
-Wave_Height = Wave_Height.transpose()
-Wave_Period = Wave_Period.transpose()
-Wave_Height = Wave_Height[Wave_Height >= 0].dropna()
-Wave_Period = Wave_Period[Wave_Period >= 0].dropna()
-Wave_Height.to_csv('Wave_Height_no_negative.csv')
-Wave_Height.describe().\
-to_csv('Wave_Height_no_negative_features.csv')
-Wave_Period.to_csv('Wave_Period_no_negative.csv')
-Wave_Period.describe().\
-to_csv('Wave_Period_no_negative_features.csv')
-```
-
-结果：
-![Alt text](image-10.png)
-![Alt text](image-11.png)
-这样效果也不错,但是这样后数据只有2627行了
-
-看来只有每个沙滩值和特征值都分开来处理了
-
-
-```python
-def Dict_to_list(self,data_dict):#用均值填充NaN
-X = []
-Y = []
-X_average ={}
-X_median = {}
-for key,values in data_dict.items():
-    index_num=[]
-    X_Temp=[]
-    for index, element in enumerate(values):
-        if math.isnan(element):
-            index_num.append(index)
-        else:
-            X_Temp.append(element)
-    if X_Temp != []:
-        X_average[key]=np.mean(X_Temp)
-        X_median[key]=np.median(X_Temp)
-    else:
-        X_average[key]=0
-        X_median[key]=0
-    if index_num != []:#有NaN,马上替换
-        for index in index_num:
-            values[index]=X_average[key] 
-
-    X.append(values)
-    Y.append([key]*len(values))
-
-# X = np.array(X)
-#Y = np.array(Y)
-print("Yes,Dict_to_list complete!")
-return X,Y
-
-```
-
-之后发现了更简洁的做法(哭)
+用均值填充缺失数据和离群负值
 ```python
 # 读取CSV文件
 df = pd.read_csv('data.csv')
@@ -146,18 +103,7 @@ df.to_csv('Data.csv', index=False)
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+### 分类
 
 最终接口：
 ```python
@@ -172,9 +118,7 @@ y = np.array([0, 0, 0, 1, 1])
 ```
 
 
-
 构造X,y接口：
-
 
 
 先把数据格式处理为：{'Montrose Beach':[1,2,3,4],'Ohio Street Beach':[1,2,3,4],'Calumet Beach':[1,2,3,4],'63rd Street Beach':[1,2,3,4]}
@@ -219,11 +163,6 @@ def Features_Get(data):
     print("Yes,data cleaning complete!")
     return Features_label_dict
 ```
-
-#### 清洗后
-
-
-
 #### 分类方法说明
 <font size=1>
 1.数据类型：首先要了解数据的类型是离散型还是连续型。如果数据是离散型的，可以考虑使用决策树、朴素贝叶斯等方法。如果数据是连续型的，可以考虑使用支持向量机、逻辑回归等方法。
@@ -267,11 +206,41 @@ def Features_Get(data):
 
 4. 特征间关联不明显：即使特征之间的关联不明显，随机森林仍然可以发挥作用。由于随机森林是通过集成多个决策树的预测结果进行分类的，即使特征间的关联不明显，随机森林可以通过综合多个决策树的预测结果来提高分类准确性。
 
-
-
-
 </font>
 
-
-
-
+#### 选择决策树进行分类
+```python
+def train_and_evaluate_decision_tree(X, y):
+    """
+    使用输入的特征数据和目标数据训练决策树模型，并计算训练集和测试集的准确率
+    参数：
+    X: 特征数据
+    y: 目标数据
+    返回：
+    训练集和测试集的准确率
+    """
+    # 将数据集划分为训练集和测试集
+    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)
+    # 实例化决策树分类器
+    clf = DecisionTreeClassifier()
+    # 使用训练集数据拟合模型
+    clf.fit(X_train, y_train)
+    # 使用训练集数据进行预测
+    y_train_pred = clf.predict(X_train)
+    # 使用测试集数据进行预测
+    y_test_pred = clf.predict(X_test)
+    # 计算训练集和测试集的准确率
+    train_accuracy = metrics.accuracy_score(y_train, y_train_pred)
+    test_accuracy = metrics.accuracy_score(y_test, y_test_pred)
+    # 返回训练集和测试集的准确率
+    return train_accuracy, test_accuracy
+```
+当特征值选取典型的四个值'Water_Temperature', 'Turbidity', 'Wave_Height','Wave_Period'：
+![Alt text](image-16.png)
+准确率：
+![Alt text](image-17.png)
+增加特征值:'Transducer_Depth'
+![Alt text](image-18.png)
+在增加特征值'Battery_Life'：
+![Alt text](image-19.png)
+Transducer_Depth、Battery_Life为什么与准确率有关？
