2023/12/3 将函数进行了合并

--- a/Data Mining/Data Processing/思路.md
+++ b/Data Mining/Data Processing/思路.md
@@ -37,6 +37,7 @@ Wave_Period:
 
 理论：如果数据点比第一个四分位数低 1.5 乘 IQR，或比第三个四分位数高 1.5 乘 IQR，就属于离群或极度离群
 ```python
+Wave_Height = pd.DataFrame.from_dict(Wave_Height_label_dict,orient='index')
 Wave_Height = Wave_Height.transpose()
 Wave_Height.to_csv('Wave_Height.csv')
 Q1 = Wave_Height.quantile(0.25)
@@ -50,6 +51,7 @@ df_no_outliers_Wave_Height.describe().\
 to_csv('Wave_Height_no_outliers_features.csv')
 
 
+Wave_Period = pd.DataFrame.from_dict(Wave_Period_label_dict,orient='index')
 Wave_Period = Wave_Period.transpose()
 Wave_Period.to_csv('Wave_Period.csv')
 Q1 = Wave_Period.quantile(0.25)
