合并了设计Html,将图片打包到html文件夹下，才能在其他电脑上查看图片

--- a/Data Mining/设计思路/思路-02.md
+++ b/Data Mining/设计思路/思路-02.md
@@ -33,7 +33,7 @@ def Box_Plot(dataFrame):
     plt.show()
 ```
 按月份将六个沙滩的Wave_Height 和Wava_period 绘制折线图
-![Alt text](image-15.png)
+![Alt text](image-20.png)
 ```python
 def Time_Plot(data):
     Beach_Name = ['Montrose Beach', 'Ohio Street Beach',
@@ -97,7 +97,8 @@ apply(lambda x: x.mask((x < 0) | x.isna(), mean_values[x.name]), axis=0)
 # 将结果保存回原CSV文件
 df.to_csv('Data.csv', index=False)
 ```
-
+填充之后的月份折线图：
+![Alt text](image-21.png)
 
 
 
