12/4 21:43 完成了第一阶段的数据分析答辩

--- a/Data Mining/设计思路/思路-01、02/思路-02.md
+++ b/Data Mining/设计思路/思路-01、02/思路-02.md
@@ -1,5 +1,6 @@
 # 大数据挖掘
 ## 天气自动传感器大数据
+## ------------------------------------12/4 第一次答辩分界线------------------------------------
 ### 数据处理思路
 
 
@@ -245,3 +246,54 @@ def train_and_evaluate_decision_tree(X, y):
 在增加特征值'Battery_Life'：
 ![Alt text](image-19.png)
 Transducer_Depth、Battery_Life为什么与准确率有关？
+可能是不同沙滩测量采用的传感器种类不同，沙滩深浅不同，所以传感器的埋藏深度不同。
+
+### 问题
+训练效果很好，测试准确率太低，过拟合
+
+岛屿上的沙滩可能挨得比较近，所以可能影响分类结果，考虑取两片数值差异较大的沙滩进行分类。
+
+### 他人
+为旅游人群、季节给出建议。
+### 解决方案
+调参
+
+### 下一步
+研究周期与水温-季节、月份的关系
+
+## 最终准备 
+----------------------------------------------------------------------
+
+### 思路-02
+
+### 问题
+如何给出旅游人群、季节给出建议？
+
+### 背景
+旅游人群：
+- 10岁以下
+- 10-20岁
+- 20-30岁
+- 30-40岁
+- 40-50岁
+- 50-60岁
+- 60-70岁
+- 70-80岁
+- 80岁以上
+
+季节：
+- 春季
+- 夏季
+- 秋季
+- 冬季
+
+### 要求
+给出旅游人群、季节给出建议
+
+### 解决方案
+调参
+
+### 下一步
+研究周期与水温-季节、月份的关系
+
+### 参考资料
