--- a/Data Mining/设计思路/思路-03/思路-03.md
+++ b/Data Mining/设计思路/思路-03/思路-03.md
@@ -42,11 +42,11 @@
 因此，对于想要在海滩进行冲浪或游泳的人来说，选择适合自己技能水平的波浪高度和周期非常重要。初学者可以选择较低且规律的波浪，而有经验的冲浪者可能更喜欢挑战较高的波浪。
 
 
-
-
-
 </font>
+
 #### 考虑
+
+
 <font size=1>
 
 因此，综合考虑水温，浑浊度，海滩的波浪高度和波浪周期，我们可以得出以下结论：
@@ -56,7 +56,7 @@
 在六个沙滩中，找出适合自己技能水平的波浪高度和波浪周期。
 plus:最后可以给出游玩季节的建议
 </font>
-<font size=1>
+
 初学者：求稳(数值)
 
 | Water_Temperature|大|
@@ -64,8 +64,8 @@ plus:最后可以给出游玩季节的建议
 | Turbidity|小| 
 | Wave_Height|小| 
 | Wave_Period|大| 
-有经验者：(数值)
 
+有经验者：(数值)
 | Water_Temperature|小|
 | :----: | :----: |
 | Turbidity|大| 
@@ -73,10 +73,76 @@ plus:最后可以给出游玩季节的建议
 | Wave_Period|小| 
 
 
+#### 设计推荐系统(没搞)
+
+还没想出比直接用随机森林更好的办法 (该表格无用)：
 |  | 初学者 | 经验者 |
 | :-----| ----: | :----: |
 |  数值 1| 可，不建议 | 单元格 |
 | 数值2 | 单元格 | 单元格 |
 |  数值3| 单元格 | 单元格 |
 | 数值4 | 单元格 | 单元格 |
-apply(lambda x: ((x < (x.quantile(0.25) - 1.5 * (x.quantile(0.75) - x.quantile(0.25)))) | (x > (x.quantile(0.75) + 1.5 * (x.quantile(0.75) - x.quantile(0.25))))).sum())
+
+#### 简单预测
+
+将时间数据，转为数值，然后进行训练，得到模型，然后利用模型进行预测，得到适宜冲浪的月份。
+```python
+        # 在数据中提取月份信息   
+        data['Measurement_Date_And_Time'] = pd.to_datetime(data['Measurement_Date_And_Time'])
+        # 提取月份信息并存储为新列
+        data['Month'] = data['Measurement_Date_And_Time'].dt.month
+        #将data['Month'] 数据类型变为str
+        data['Month'] = data['Month'].astype(str)
+        print("是否有缺失值：",data['Month'].isnull().any())
+        data = data.dropna(subset=['Month'])
+        print("是否有缺失值：",data['Month'].isnull().any())
+
+```
+认为传感器深度为沙滩近岸区高度，利用训练模型，给出建议.
+
+因为随机森林不允许训练方式为多对多，只能将月份和沙滩名分开训练，考虑到同一岛上同一月份的各个沙滩的各维特征具有相似性，分开训练，得到的结果差距应该不大。
+X去除了'Battery_Life',选取：
+```
+X = ['Water_Temperature', 'Turbidity', 'Wave_Height''Wave_Period''Transducer_Depth']
+Y = ['Beach_Name','Measurement_Date_And_Time']
+```
+训练：
+
+```python
+   def Random_Forest_Classification_Plus(self,X, Y):
+        # 拆分数据集
+        X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)
+
+        # 训练多个独立的随机森林模型
+        models = {}
+        for column in range(Y.shape[1]):
+            rf = RandomForestClassifier()
+            rf.fit(X_train, Y_train[:, column])
+            models[column] = rf
+
+        # 预测并计算准确率
+        train_accuracies = []
+        test_accuracies = []
+        for column, model in models.items():
+            y_train_pred = model.predict(X_train)
+            train_accuracy = accuracy_score(Y_train[:, column], y_train_pred)
+            train_accuracies.append(train_accuracy)
+            y_test_pred = model.predict(X_test)
+            test_accuracy = accuracy_score(Y_test[:, column], y_test_pred)
+            test_accuracies.append(test_accuracy)
+        print("多个独立的随机森林模型训练完成！")
+        return [train_accuracies, test_accuracies], models
+
+```
+训练结果：
+![Alt text](image-5.png)
+
+
+
+可供输入的特征：
+![Alt text](image-2.png)
+输入：
+![Alt text](image-4.png)
+得到:
+![Alt text](image-3.png)
+
